docs/gui.css
.guiBox {
  display: hidden;
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 3;
}

.guiAnimation {
  margin: auto;
  background-color: #C0C0C0;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  resize: both;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  animation: startGui .25s;
}

@keyframes startGui {
  from {
    transform: scale(0);
  }
  to {
    transform: scale(1);
  }
}

@keyframes closeGui {
  from {
    transform: scale(1);
  }
  to {
    transform: scale(0);
  }
}

.guiCarousel {
  width: 100vw;
  height: fit-content;
  position: relative;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  column-gap: 0;
  top: 0;
  left: 0;
  z-index: 1;
}

.guiCarouselCol {
  position: relative;
  top: 0;
  animation: carousel 1000s linear infinite;
  width: 100%;
  height: fit-content;
  display: flex;
  justify-content: center;
  align-items: start;
  flex-direction: column;
  animation-direction: alternate;
}

.guiCarouselColRev {
  position: relative;
  width: 100%;
  bottom: 70%;
  height: fit-content;
  display: flex;
  gap: 0;
  justify-content: center;
  align-items: start;
  flex-direction: column-reverse;
  animation: carouselRev 1000s linear infinite;
  animation-direction: alternate;
}

@keyframes carousel {
  from {
    transform: translateY(0);
  }
  to {
    transform: translateY(-80%);
  }
}

@keyframes carouselRev {
  from {
    transform: translateY(0);
  }
  to {
    transform: translateY(80%);
  }
}

.slide {
  width: 100%;
  height: fit-content;
  margin: 0;
  padding: 0;
}

.slideImg {
  width: 100%;
  height: 100%;
  opacity: 80%;
  margin: 0;
  padding: 0;
}

.guiCardContainer {
  position: relative;
  margin: auto;
  width: 90%;
  height: 80%;
  display: grid;
  grid-template-rows: auto 18em 3em 18em auto;
  grid-template-columns: auto 13.5em 3em 13.5em 3em 13.5em 3em 13.5em auto;
  top: 50%;
  transform: translate(0, -50%);
}

.guiCard {
  width: 13.5em;
  height: 18em;
  border-radius: 30px;
  background: #e0e0e0;
  overflow: hidden;
  box-shadow: 15px 15px 30px #bebebe,
             -15px -15px 30px #ffffff;
}

.guiCard:hover > .guiCardCover {
  top: 120%;
}

.guiCardCover {
  position: relative;
  top: -10%;
  background: #e0e0e0;
  width: 100%;
  left: 50%;
  transform: translate(-50%, 0);
  height: 120%;
  transition: top 0.5s ease-in-out;
  overflow: hidden;
}

.guiClose {
  position: absolute;
  right: 0.5em;
  top: 0.5em;
  border-radius: 50%;
  background: #FF5D5B;
  border: 4px solid #CF544D;
  height: 0.8em;
  width: 0.8em;
  padding: 0;
  font: inherit;
  cursor: pointer;
  z-index: 2;
}

